--- a/src/Portfolio/PortFolioDesign.scss
+++ b/src/Portfolio/PortFolioDesign.scss
@@ -1,6 +1,7 @@
 // Page.scss
 body {
     margin: 0;
+    min-height: auto;
   
   }
   
@@ -18,6 +19,7 @@ body {
     background-color: #f0f0f0;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
   
     h2 {
       font-size: 1.5rem;
