--- a/src/Portfolio/PortFolioDesign.scss
+++ b/src/Portfolio/PortFolioDesign.scss
@@ -1,7 +1,7 @@
 // Page.scss
 body {
     margin: 0;
-    min-height: auto;
+    min-height: auto;    
   
   }
   
@@ -17,9 +17,10 @@ body {
     width: 29%; // 20% of the viewport width
     padding: 20px;
     background-color: #f0f0f0;
-    border-radius: 8px;
+    border-radius: 0px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
+    background: linear-gradient(rgba(122, 89, 223, 0.349),rgba(122, 208, 107, 0.284)), url("https://wallpapercave.com/dwp2x/wp8991892.jpg")center;
   
     h2 {
       font-size: 1.5rem;
