--- a/src/Portfolio/PortFolioDesign.scss
+++ b/src/Portfolio/PortFolioDesign.scss
@@ -16,7 +16,7 @@ body {
     flex: 1;
     width: 29%; // 20% of the viewport width
     padding: 20px;
-    background-color: #f0f0f0;
+    // background-color: #f0f0f0;
     border-radius: 0px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
@@ -61,7 +61,8 @@ body {
     flex: 4; // 80% of the viewport width
     width: 70%;
     padding: 20px;
-    background-color: #fff;
+    // background-color: #fff;
+    background: linear-gradient(rgba(38, 35, 46, 0.349),rgba(107, 184, 208, 0.284));
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow-y: auto; 
