--- a/src/Home/HomePage.scss
+++ b/src/Home/HomePage.scss
@@ -25,7 +25,8 @@
   flex: 1;
   padding: 50px;
   margin: 0 auto;
-  background: linear-gradient(rgba(122, 89, 223, 0.349),rgba(122, 208, 107, 0.284)), url("https://wallpapercave.com/dwp2x/wp10455999.jpg")center;
+  // background: linear-gradient(rgba(122, 89, 223, 0.349),rgba(122, 208, 107, 0.284)), url("https://wallpapercave.com/dwp2x/wp10455999.jpg")center;
+  background: url("https://wallpapercave.com/wp/wp12339081.jpg")center;
   background-size: cover;
   display: flex;
   flex-direction: column;
