--- a/src/template/Template2.scss
+++ b/src/template/Template2.scss
@@ -15,6 +15,10 @@
     .nav-links a {
       margin-bottom: 8px; /* Optional spacing between vertical links */
     }
+
+    .work-section-bottom {
+      margin-top: 1rem !important;
+    }
     
   
     &.dark-mode {
