--- a/src/template/Template3.scss
+++ b/src/template/Template3.scss
@@ -321,9 +321,13 @@
     }
   }
   @media (max-width: 800px) {
-    .nav-logo-container {
-      max-width: 140px;
-    }
+    // .nav-logo-container {
+    //   color: orange;
+    //   font-family: 'Arial', sans-serif; /* Replace with your desired font or use a generic one like 'Arial' */
+    //   font-size: 2rem;
+    //   max-width: 140px;
+    // }
+    
     .navbar-links-container {
       display: none;
     }
