--- a/src/template/Template2.scss
+++ b/src/template/Template2.scss
@@ -35,7 +35,9 @@
         background-color: #34495e;
         color: white;
       }
-      
+      social-container{
+        position: fixed;
+      }
       
     }
   
