--- a/src/template/Template2.scss
+++ b/src/template/Template2.scss
@@ -18,7 +18,7 @@
 
     .work-section-bottom {
       margin-top: 1rem !important;
-      width: 600px;
+      // width: 600px;
       // background-color: #2980b9;
     }
 
