--- a/src/template/Template2.scss
+++ b/src/template/Template2.scss
@@ -23,7 +23,7 @@
     }
 
     .work-section-info{
-      background: linear-gradient(rgba(124, 143, 163, 0.878),rgba(88, 173, 139, 0.653)), url("")center;
+      background: linear-gradient(rgba(124, 143, 163, 0.878),rgba(88, 173, 139, 0.653))center;
       width: 700px;
     }
 
